--- a/latex/intro.tex
+++ b/latex/intro.tex
@@ -14,7 +14,7 @@ La empresa pone especial enfasis en que el sistema propuesto:
     \item Que ayude a mejorar y expandir el negocio, aumentando el volumen.
 \end{itemize}
 
-\paragraph{Objectivos}
+\paragraph{Objetivos}
 El presente informe se propone:
 
 \begin{enumerate}
@@ -26,3 +26,45 @@ El presente informe se propone:
     \item Presentar una serie de escenarios representativos de uso del sistema, haciendo enfasis en el ciclo de vida de los proyectos de la empresa.
     \item Discutir distintas alternativas para el sistema mostrando las ventajas y desventajas de cada una.
 \end{enumerate}
+
+\subsection{Procesos actuales de la empresa}
+
+A partir de la información que obtuvimos mediante el proceso de elicitación podemos dividir los procesos que se llevan a cabo en la empresa en tres grupos:
+\begin{enumerate}
+    \item \textbf{Creación de los proyectos}:
+    \begin{enumerate}
+        \item Los gerentes o los PM son contactadas por potenciales clientes.
+        \item Los gerentes seleccionan un PM, quien llevará adelante el proyecto.
+        \item El PM asignado al proyecto define el alcance, duración y condiciones del proyecto con el cliente y elige el proveedor utilizando una base de datos de proveedores creada en Excel.
+        \item Los gerentes valida el proyecto definido por el PM, negociando con él su comisión.
+        \item Los gerentes y el PM confeccionan los contratos, a partir de templates en Word, con el cliente y el proveedor.
+        \item Todas las partes firman los contratos en una escribania, donde un escribano certifica las firmas.
+    \end{enumerate}    
+    \item \textbf{Seguimiento de los proyectos}:
+    \begin{enumerate}
+        \item El PM lleva adelante el seguimiento de los proyectos, creando un archivo excel por cada proyecto que supervisa.   
+        \item Los gerentes obtienen actualizaciones del estado de los proyectos a partir de llamados telefonicos con los PM.
+        \item En caso de una cancelación o incumplimiento del proveedor, el PM busca otro poveedor.
+        \item En caso en que un cliente manifiesta una disconfomidad con el PM, el gerente selecciona otro PM para llevar adelante el proyecto.
+        \item Si surgen adicionales, estos serán considerados como nuevos proyectos.
+        \item Todas las partes firman los contratos en una escribania, donde un escribano certifica las firmas.
+    \end{enumerate}
+    \item \textbf{Finalización de los proyectos}: consistente en realizar los diversos pagos y cobros.    
+\end{enumerate}
+
+\textbf{Limitaciones actuales}
+
+Actualmente observamos en la empresa las siguientes limitaciones:
+\begin{itemize}
+    \item La actualización de la base de datos de proveedores es engorrosa, ya que cada miembro de DC Constructores tiene su versión de la misma.
+    \item Actualmente la información sobre los proyectos esta dispersa en varios archivos, dificultando su seguimiento.
+    \item Los gerentes se enteran tarde sobre los problemas en los proyectos, ya que deben comunicarse con cada PM para obtener actualizaciones o esperar su llamado.
+    \item Gerentes realizan tareas tediosas que no agregan valor, tales como búsqueda de proveedores, creaciones de contratos y llamados constantes a los PM.
+    \item La modalidad actual no es escalable.
+    \item No hay registro sobre proyectos pasados que podrian llevar a mejoras en la selección de los proveedores y de los PM.
+\end{itemize}
+
+
+
+
+
