--- a/latex/intro.tex
+++ b/latex/intro.tex
@@ -27,7 +27,7 @@ El presente informe se propone:
     \item Discutir distintas alternativas para el sistema mostrando las ventajas y desventajas de cada una.
 \end{enumerate}
 
-\subsection{Procesos actuales de la empresa}
+\section{Procesos actuales de la empresa}
 
 A partir de la información que obtuvimos mediante el proceso de elicitación podemos dividir los procesos que se llevan a cabo en la empresa en tres grupos:
 \begin{enumerate}
@@ -47,7 +47,6 @@ A partir de la información que obtuvimos mediante el proceso de elicitación po
         \item En caso de una cancelación o incumplimiento del proveedor, el PM busca otro poveedor.
         \item En caso en que un cliente manifiesta una disconfomidad con el PM, el gerente selecciona otro PM para llevar adelante el proyecto.
         \item Si surgen adicionales, estos serán considerados como nuevos proyectos.
-        \item Todas las partes firman los contratos en una escribania, donde un escribano certifica las firmas.
     \end{enumerate}
     \item \textbf{Finalización de los proyectos}: consistente en realizar los diversos pagos y cobros.    
 \end{enumerate}
@@ -64,7 +63,28 @@ Actualmente observamos en la empresa las siguientes limitaciones:
     \item No hay registro sobre proyectos pasados que podrian llevar a mejoras en la selección de los proveedores y de los PM.
 \end{itemize}
 
+\section{Presentación sistema}
+El sistema que proponemos se caracteriza por simplificar las tareas dentro de la empresa, optimizar la elección de los proveedores, agilizar las comunicaciones, y permitir controles inmediatos. Para lograr estos fines, suponemos las siguientes presunciones de dominio y proponemos los siguientes requerimientos que serán cumplidos por el sistema:
+
+\section{Interacciones y alcance del sistema: Diagrama de Contexto}
+A continuación mostramos el Diagrama de Contexto de la empresa. En el mismo se detallan las interacciones entre los diversos agentes de la empresa y su interacción con el sistema propuesto:
+
+\section{Requerimientos del sistema: Diagrama de Objetivo}
+En este diagrama detallamos como la implementación del sistema propuesto colaborará con la mejora de los procesos de la empresa
 
 
+\section{Escenarios representativos de uso del sistema}
+Para ilustrar el funcionamiento del sistema propuesto, detallamos como sería el flujo de trabajo en las siguientes situaciones:
+\begin{enumerate}
+    \item Creación de proyectos.
+    \item Seguimiento de proyectos.
+    \item Finalización de proyectos.
+\end{enumerate}
 
-
+\subsection{Creación de proyectos}
+\begin{itemize}
+    \item Un cliente se contacta con DC Construcciones requiriendo los servicios de la empresa.
+    \item Los gerentes o el empleado crea un nuevo proyecto en el sistema detallando los datos del cliente.
+    \item Utilizando el sistema para asesorarlos en su decisión, los gerentes designan al PM para el proyecto. La designación es cargada en el sistema por los gerentes o el empleado.
+    \item El PM asignado al proyecto busca proveedores, utilizando el ranking y los filtros dado por el sistema    
+\end{itemize}
