[Escenarios] Creaciond e proeyctos

--- a/latex/informe.tex
+++ b/latex/informe.tex
@@ -109,6 +109,10 @@
 \input{vistas}
 
 \newpage
+\section{Escenarios representativos de uso del sistema}
+\input{escenarios}
+
+\newpage
 \section{Discusión}
 \input{discusion}
 
