[Escenarios] Seguimiento de proyectos

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -36,9 +36,14 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos como sería el
 \end{enumerate}
 
 \subsection{Seguimiento de proyectos}
-\begin{itemize}
-    \item Un cliente se contacta con DC Construcciones requiriendo los servicios de la empresa.
-\end{itemize}
+\begin{enumerate}
+    \item Una vez comenzado un proyecto, el PM asignado es el encargado de subir actualizaciones en el Sistema.
+    \item Cada proyecto puede ser configurado en el Sistema para tener actualizaciones dentro de un cierto período de tiempo.
+    \item En caso de que se esté por agotar el período de tiempo y no haya una actualización, el Sistema le envía una notificación al PM pidiendolé que actualice.
+    \item En caso de que se agote el período de tiempo y no haya una actualización, el Sistema envía le notifica esto a los gerentes.
+    \item Además de las actualizaciones obligatorias, el PM puede subir actualizaciones en cualquier otro momento, por ejemplo para indicar que sucedió algún problema en el proyecto en cuyo caso el Sistema también notifica a los gerentes.
+    \item En caso de que el proveedor quiera cancelar, puede hacerlo personalmente (y el PM lo refleja en el Sistema) o diréctamente a través del Sistema.
+\end{enumerate}
 
 \subsection{Finalización de proyectos}
 \begin{itemize}
