[Escenarios] Finalización de proyectos

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -46,6 +46,12 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos como sería el
 \end{enumerate}
 
 \subsection{Finalización de proyectos}
-\begin{itemize}
-    \item Un cliente se contacta con DC Construcciones requiriendo los servicios de la empresa.
-\end{itemize}
+\begin{enumerate}
+    \item Una vez que finaliza un proyecto, el PM asignado lo marca así en el Sistema.
+    \item Luego se hacen varias encuestas:
+        \begin{itemize}
+            \item El PM evalua a los proveedores en el Sistema.
+            \item El Gerente evalua al PM en el Sistema.
+            \item El Cliente evalua al PM. Si tiene internet lo hace diréctamente a través del Sistema, si no a a través del Empleado quien después carga la evaluación en el Sistema.
+        \end{itemize}
+\end{enumerate}
