[Escenarios] Cambios menores

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -37,7 +37,7 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos como sería el
 
 \subsection{Seguimiento de proyectos}
 \begin{enumerate}
-    \item Una vez comenzado un proyecto, el PM asignado es el encargado de subir actualizaciones en el Sistema.
+    \item Una vez comenzado un proyecto, el PM asignado es el encargado de subir actualizaciones en el Sistema. Estas actualizaciones las puede subir el PM mismo, o las puede subir el Empleado.
     \item Cada proyecto puede ser configurado en el Sistema para tener actualizaciones dentro de un cierto período de tiempo.
     \item En caso de que se esté por agotar el período de tiempo y no haya una actualización, el Sistema le envía una notificación al PM pidiendolé que actualice.
     \item En caso de que se agote el período de tiempo y no haya una actualización, el Sistema envía le notifica esto a los gerentes.
@@ -50,8 +50,8 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos como sería el
     \item Una vez que finaliza un proyecto, el PM asignado lo marca así en el Sistema.
     \item Luego se hacen varias encuestas:
         \begin{itemize}
-            \item El PM evalua a los proveedores en el Sistema.
-            \item El Gerente evalua al PM en el Sistema.
+            \item El PM evalua a los proveedores. Esta evaluación la puede cargar en el Sistema el PM mismo o el Empleado.
+            \item El Gerente evalua al PM. Esta evaluación la puede cargar en el Sistema el Gerente mismo o el Empleado.
             \item El Cliente evalua al PM. Si tiene internet lo hace diréctamente a través del Sistema, si no a a través del Empleado quien después carga la evaluación en el Sistema.
         \end{itemize}
 \end{enumerate}
