[Escenarios] Arreglo eleccion proveedores en Creacion Proyectos

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -22,17 +22,17 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos como sería el
             \item Consensuar el alcance y detalles del proyecto con el cliente. Si este se comunicó con la empresa a través del Sistema, entonces el PM interacciona con él a través del Sistema, en caso contrario lo hace personalmente. Una vez que se llega a consenso el PM (\textbf{el empleado no, no ?}) carga el alcance y detalles en el Sistema.
             \item Elegir proveedores, asesorado por el Sistema. Para esto:
                 \begin{itemize}
-                    \item El Sistema propone proveedores basado en ranking y filtros.
-                    \item El PM elige un proveedor de esa lista. Si dicho proveedor tiene el seguro de caución vencido, entonces el PM debe (ya sea por el Sistema o personalmente) pedir que envien devuelta dicho seguro para actualizarlo en el Sistema.
-                    \item Luego, el PM se contacta con el proveedor (a través del Sistema o personalmente) para contarle el proyecto y pedir presupuesto.
-                    \item El proveedor responde por el mismo medio por el cual fue contactado.
-                    \item Al llegar a un arreglo, el PM asigna ese proveedor al proyecto en el Sistema.
+                    \item El Sistema propone proveedores basado en ranking y filtros. Los proveedores propuestos tienen todos el seguro de caución al día.
+                    \item Luego, el PM puede notificar a través del Sistema a aquellos proveedores que tengan una cuenta en el mismo, contandoles el alcance del proyecto y pidiendo
+                        presupuesto. Si el PM quisiera contactarse con un proveedor que no tiene cuenta en el Sistema debe hacerlo personalmente, refelejando luego lo acordado en el Sistema.
+                    \item Los proveedores responden por el mismo medio por el cual fueron contactados.
+                    \item Al llegar a un arreglo con un proveedor, el PM lo asigna al proyecto en el Sistema.
                 \end{itemize}
         \end{itemize}
-    \item Una vez que un proyecto tiene cargado su alcance y proveedores en el Sistema, este envía una notificación a los gerentes pidiendo que validación, la cual se lleva a cabo en el Sistema.
+    \item Una vez que un proyecto tiene cargado su alcance y proveedores en el Sistema, este envía una notificación a los gerentes pidiendo su validación, la cual se lleva a cabo en el Sistema.
     \item Los gerentes validan el proyecto en el Sistema, y envían presupuesto al cliente (personalmente o a través del Sistema).
     \item Si el Cliente acepta (personalmente o a través del Sistema), los gerentes arman un pre-contrato utilizando el Sistema, que propone diferentes templates basados en las características del proyecto.
-    \item Los gerentes, PM, Cliente y proveedores afinan los detalles del pre-contrato en la Escribanía, dónde luego firman todos.
+    \item Luego, los gerentes, PM, Cliente y proveedores afinan los detalles del pre-contrato en la Escribanía, dónde luego firman todos.
 \end{enumerate}
 
 \subsection{Seguimiento de proyectos}
@@ -54,4 +54,12 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos como sería el
             \item El Gerente evalua al PM. Esta evaluación la puede cargar en el Sistema el Gerente mismo o el Empleado.
             \item El Cliente evalua al PM. Si tiene internet lo hace diréctamente a través del Sistema, si no a a través del Empleado quien después carga la evaluación en el Sistema.
         \end{itemize}
+\end{enumerate}
+
+\subsection{Actualización proveedores en el Sistema}
+\begin{enumerate}
+    \item Un proveedor puede registrarse en el Sistema directamente o mediante alguna persona de la empresa.
+    \item A continuación, el proveedor debe enviar su seguro de caución al día. Devuelta, esto puede hacerlo directamente en el Sistema o mediante alguna persona de la empresa.
+    \item Más adelante, aquellos proveedores que estén cargados en el Sistema y tengan un seguro de caución vencido serán notificados a través del Sistema para que lo actualicen.
+      De no poder acceder al Sistema, será el Empleado el encargado de contactarse con ellos y actualizar su seguro de caución en el Sistema.
 \end{enumerate}
