[Escenarios] Cambios menores

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -1,9 +1,4 @@
-Para ilustrar el funcionamiento del Sistema propuesto, detallamos como sería el flujo de trabajo en las siguientes situaciones:
-\begin{enumerate}
-    \item Creación de proyectos.
-    \item Seguimiento de proyectos.
-    \item Finalización de proyectos.
-\end{enumerate}
+Para ilustrar el funcionamiento del Sistema propuesto, detallamos a continuación como sería el flujo de trabajo en diferentes escenarios:
 
 \subsection{Creación de proyectos}
 
