[Escenarios] Cambios menores

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -49,6 +49,7 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos a continuació
             \item El Gerente evalua al PM. Esta evaluación la puede cargar en el Sistema el Gerente mismo o el Empleado.
             \item El Cliente evalua al PM. Si tiene internet lo hace diréctamente a través del Sistema, si no a a través del Empleado quien después carga la evaluación en el Sistema.
         \end{itemize}
+      \item Por último, el Sistema le envía los costos y detalles del proyecto al Contador.
 \end{enumerate}
 
 \subsection{Actualización proveedores en el Sistema}
