[Escenarios] Cambios menores

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -54,8 +54,8 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos a continuació
 
 \subsection{Actualización proveedores en el Sistema}
 \begin{enumerate}
-    \item Un proveedor puede registrarse en el Sistema directamente o mediante alguna persona de la empresa.
-    \item A continuación, el proveedor debe enviar su seguro de caución al día. Devuelta, esto puede hacerlo directamente en el Sistema o mediante alguna persona de la empresa.
+    \item Un proveedor puede registrarse en el Sistema directamente o mediante el Empleado.
+    \item A continuación, el proveedor debe enviar su seguro de caución al día. Devuelta, esto puede hacerlo directamente en el Sistema o mediante el Empleado.
     \item Más adelante, aquellos proveedores que estén cargados en el Sistema y tengan un seguro de caución vencido serán notificados a través del Sistema para que lo actualicen.
       De no poder acceder al Sistema, será el Empleado el encargado de contactarse con ellos y actualizar su seguro de caución en el Sistema.
 \end{enumerate}
