[Escenarios] Cambios menores

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -22,7 +22,7 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos a continuació
                         presupuesto. Si el PM quisiera contactarse con un proveedor que no tiene cuenta en el Sistema debe hacerlo personalmente, refelejando luego lo acordado en el Sistema.
                     \item Los proveedores responden por el mismo medio por el cual fueron contactados.
                     \item Al llegar a un arreglo con un proveedor, el PM lo asigna al proyecto en el Sistema.
-                    \item Al resto de los proveedores no fueron seleccionados, el Sistema notifica que ya se encontró otro proveedor para el proyecto.
+                    \item Al resto de los proveedores que no fueron seleccionados, el Sistema notifica que ya se encontró otro proveedor para el proyecto.
                 \end{itemize}
         \end{itemize}
     \item Una vez que un proyecto tiene cargado su alcance y proveedores en el Sistema, este envía una notificación a los gerentes pidiendo su validación, la cual se lleva a cabo en el Sistema.
