[Escenarios] Cambios menores

--- a/latex/escenarios.tex
+++ b/latex/escenarios.tex
@@ -14,7 +14,7 @@ Para ilustrar el funcionamiento del Sistema propuesto, detallamos a continuació
     \item El PM asignado es notificado por el Sistema sobre el nuevo proyecto en el cual esta a cargo.
     \item El PM asignado se encarga de:
         \begin{itemize}
-            \item Consensuar el alcance y detalles del proyecto con el cliente. Si este se comunicó con la empresa a través del Sistema, entonces el PM interacciona con él a través del Sistema, en caso contrario lo hace personalmente. Una vez que se llega a consenso el PM (\textbf{el empleado no, no ?}) carga el alcance y detalles en el Sistema.
+            \item Consensuar el alcance y detalles del proyecto con el cliente. Si este se comunicó con la empresa a través del Sistema, entonces el PM interacciona con él a través del Sistema, en caso contrario lo hace personalmente. Una vez que se llega a consenso el PM carga el alcance y detalles en el Sistema.
             \item Elegir proveedores, asesorado por el Sistema. Para esto:
                 \begin{itemize}
                     \item El Sistema propone proveedores basado en ranking y filtros. Los proveedores propuestos tienen todos el seguro de caución al día.
