Agrego diagrama de contexto y observaciones de como se leen los diagramas

--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -1,9 +1,35 @@
 \subsection{Interacciones y alcance del sistema: Diagrama de Contexto}
 A continuación mostramos el Diagrama de Contexto de la empresa. En el mismo se detallan las interacciones entre los diversos agentes de la empresa y su interacción con el sistema propuesto:
 
-VER PDF CON DIAGRAMA DE CONTEXTO
+\subsubsection{Diagrama}
+
+\begin{figure}[p]
+    \centering
+    \includegraphics[width=0.8\textwidth]{imagenes/contexto1.png}
+    %\caption{Awesome Image}
+    \label{fig:awesome_image}
+\end{figure}
+
+\begin{figure}[p]
+    \centering
+    \includegraphics[width=0.8\textwidth]{imagenes/contexto2.png}
+    %\caption{Awesome Image}
+    \label{fig:awesome_image}
+\end{figure}
+
+\subsubsection{Observaciones}
+
+Debido a la gran cantidad de interacciones entre los agentes decidimos, por una cuestión de comprensibilidad, separar el diagrama de contexto en dos partes complementarias. Por un lado se presentan las interacciones de todos los agentes con el Sistema a implementar. Por el otro, se muestran las acciones que suceden entre los demás agentes entre si. Estos diagramas no deben ser leídos por separado, sino que son dos partes del mismo, que representa el Diagrama de Contexto final entre todos los agentes.
+
+Además, para evitar confusiones y reducir el espacio, cada vez que se daba el caso de que había múltiples flechas de interacción entre dos agentes, la simplificamos en una sola donde listamos todas las formas en las que un agente actúa sobre el otro. Por eso, hay múltiples líneas de texto en cada flecha y estas deben ser leídas como una flecha en sí por cada línea de texto.
 
 \subsection{Requerimientos del sistema: Diagrama de Objetivo}
 En este diagrama detallamos como la implementación del sistema propuesto colaborará con la mejora de los procesos de la empresa.
 
-VER PDF CON DIAGRAMA DE OBJETIVOS
+\subsubsection{Diagrama}
+
+\subsubsection{Observaciones}
+
+El diagrama de objetivos se presenta con la idea de ser leído de izquierda a derecha. Frecuentemente, tratamos de colocar los objetivos que se suceden entre sí de esta forma para 'simular' los diferentes pasos que se suceden a través del tiempo.
+
+Separamos el diagrama en varias partes (como el Diagrama de Contexto) varias veces debido al tamaño del mismo. Estos gráficos se deben leer como las diferentes partes de un mismo diagrama. Asi, presentamos primero las ramas superiores que engloban los objetivos de más alto nivel y luego mostramos como se va completando cada rama con su diagrama correspondiente.
