--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -3,19 +3,21 @@ A continuación mostramos el Diagrama de Contexto de la empresa. En el mismo se 
 
 \subsubsection{Diagrama}
 
-\begin{figure}[p]
+\begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\textwidth]{imagenes/contexto1.png}
+    \includegraphics[width=1\textwidth]{imagenes/contexto1.png}
     %\caption{Awesome Image}
     \label{fig:awesome_image}
 \end{figure}
 
-\begin{figure}[p]
+\begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\textwidth]{imagenes/contexto2.png}
+    \includegraphics[width=1\textwidth]{imagenes/contexto2.png}
     %\caption{Awesome Image}
     \label{fig:awesome_image}
 \end{figure}
+
+\newpage
 
 \subsubsection{Observaciones}
 
