Imagen de prueba landscape

--- a/latex/informe.tex
+++ b/latex/informe.tex
@@ -39,6 +39,11 @@
 % \setcounter{secnumdepth}{2}
 \usepackage{underscore}
 \usepackage{kbordermatrix}% Matrix column labels
+\usepackage{graphicx}
+\usepackage{wrapfig}
+\usepackage{lscape}
+\usepackage{rotating}
+\usepackage{epstopdf}
 \usetikzlibrary{arrows,shapes}
 \usepackage{tkz-graph}
 \usepackage{caratula}
