--- a/latex/intro.tex
+++ b/latex/intro.tex
@@ -27,4 +27,8 @@ El presente informe se propone:
     \item Discutir distintas alternativas para el sistema mostrando las ventajas y desventajas de cada una.
 \end{enumerate}
 
-
+\newpage
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=8in, keepaspectratio, angle=90]{imagenes/seleccion.png}
+\end{figure}
