--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -5,14 +5,14 @@ A continuación mostramos el Diagrama de Contexto de la empresa. En el mismo se 
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=1\textwidth]{imagenes/contexto1.png}
+    \includegraphics[width=\textwidth]{imagenes/contexto1.png}
     %\caption{Awesome Image}
     \label{fig:awesome_image}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=1\textwidth]{imagenes/contexto2.png}
+    \includegraphics[width=\textwidth]{imagenes/contexto2.png}
     %\caption{Awesome Image}
     \label{fig:awesome_image}
 \end{figure}
