Pongo algunas vistas de diagramas de objetivos

--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -3,18 +3,14 @@ A continuación mostramos el Diagrama de Contexto de la empresa. En el mismo se 
 
 \subsubsection{Diagrama}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{imagenes/contexto1.png}
-    %\caption{Awesome Image}
-    \label{fig:awesome_image}
+    \includegraphics[width=\textwidth]{imagenes/contexto-con-sistema.png}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{imagenes/contexto2.png}
-    %\caption{Awesome Image}
-    \label{fig:awesome_image}
+    \includegraphics[width=\textwidth]{imagenes/contexto-sin-sistema.png}
 \end{figure}
 
 \newpage
@@ -29,6 +25,30 @@ Además, para evitar confusiones y reducir el espacio, cada vez que se daba el c
 En este diagrama detallamos como la implementación del sistema propuesto colaborará con la mejora de los procesos de la empresa.
 
 \subsubsection{Diagrama}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-principales.png}
+\end{figure}
+
+\vspace{1em}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, keepaspectratio, angle=90]{imagenes/objetivos-creacion.png}
+\end{figure}
+
+\vspace{1em}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-seguimiento.png}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=8in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-pm.png}
+\end{figure}
 
 \subsubsection{Observaciones}
 
