Graficos seguimiento de proyecto

--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -25,10 +25,32 @@ Debido a la gran cantidad de interacciones entre los agentes decidimos, por una 
 
 Además, para evitar confusiones y reducir el espacio, cada vez que se daba el caso de que había múltiples flechas de interacción entre dos agentes, la simplificamos en una sola donde listamos todas las formas en las que un agente actúa sobre el otro. Por eso, hay múltiples líneas de texto en cada flecha y estas deben ser leídas como una flecha en sí por cada línea de texto.
 
+\newpage
+
 \subsection{Requerimientos del sistema: Diagrama de Objetivo}
 En este diagrama detallamos como la implementación del sistema propuesto colaborará con la mejora de los procesos de la empresa.
 
 \subsubsection{Diagrama}
+
+Seguimiento del proyecto:
+
+\includegraphics[width=\textwidth]{imagenes/seguimiento1.png}
+
+En este grafico se muestran los niveles mas altos de 'Seguimiento de proyecto'. Aca no se ven los refinamientos de 'Mantener estado de proyectos actualizados', que estan en las siguientes figuras.
+
+\includegraphics[width=\textwidth]{imagenes/seguimiento2.png}
+
+En este desgloce, se puede apreciar un O-refinamiento en el cual las dos opciones tienen objetivos en comun pero uno agrega la opcion de mantener al PM actualizando obligatoriamente el estado de proyecto cada poco tiempo. Estos objetivos a su vez los desglozamos en las siguientes figuras.
+
+\includegraphics[width=\textwidth]{imagenes/seguimiento3.png}
+
+Aca se puede ver el Y-refinamiento de la primer alternativa.
+
+\includegraphics[width=\textwidth]{imagenes/seguimiento4.png}
+
+Este es el detalle de la segunda alternativa, muy similar a la primera pero con menos funcionalidad.
+
+\newpage
 
 \subsubsection{Observaciones}
 
