Pongo algunas vistas de diagramas de objetivos

--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -35,14 +35,35 @@ En este diagrama detallamos como la implementación del sistema propuesto colabo
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth, keepaspectratio, angle=90]{imagenes/objetivos-creacion.png}
+    \includegraphics[width=\textwidth, keepaspectratio, angle=90]{imagenes/objetivos-creacion-principal.png}
 \end{figure}
 
 \vspace{1em}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{imagenes/objetivos-seguimiento.png}
+    \includegraphics[width=\textwidth]{imagenes/objetivos-seguimiento-principal.png}
+\end{figure}
+
+\vspace{1em}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=8in, keepaspectratio, angle=90]{imagenes/objetivos-finalizacion-principal.png}
+\end{figure}
+
+\vspace{1em}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-1.png}
+\end{figure}
+
+\vspace{1em}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-2.png}
 \end{figure}
 
 \begin{figure}[H]
