Vistas de selección de mejor proveedor

--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -71,6 +71,31 @@ En este diagrama detallamos como la implementación del sistema propuesto colabo
     \includegraphics[width=8in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-pm.png}
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=8in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-proveedor-principal.png}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-1.png}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-2.png}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-3.png}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=.5\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-4.png}
+\end{figure}
+
 \subsubsection{Observaciones}
 
 El diagrama de objetivos se presenta con la idea de ser leído de izquierda a derecha. Frecuentemente, tratamos de colocar los objetivos que se suceden entre sí de esta forma para 'simular' los diferentes pasos que se suceden a través del tiempo.
