--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -37,7 +37,7 @@ En este diagrama detallamos como la implementación del sistema propuesto colabo
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth, keepaspectratio, angle=90]{imagenes/objetivos-creacion-principal.png}
+    \includegraphics[width=18cm, keepaspectratio]{imagenes/objetivos-creacion-principal.png}
 \end{figure}
 
 \vspace{1em}
@@ -56,14 +56,14 @@ En este diagrama detallamos como la implementación del sistema propuesto colabo
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=8in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-pm.png}
+    \includegraphics[width=10in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-pm.png}
 \end{figure}
 
 \subsubsection{Seleccion mejor proveedor}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=8in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-proveedor-principal.png}
+    \includegraphics[width=9in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-proveedor-principal.png}
 \end{figure}
 
 \begin{figure}[H]
@@ -110,7 +110,7 @@ Este es el detalle de la segunda alternativa, muy similar a la primera pero con 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=8in, keepaspectratio, angle=90]{imagenes/objetivos-finalizacion-principal.png}
+    \includegraphics[width=9in, keepaspectratio, angle=90]{imagenes/objetivos-finalizacion-principal.png}
 \end{figure}
 
 \newpage
