Agrego las vistas de finalizacion

--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -113,6 +113,22 @@ Este es el detalle de la segunda alternativa, muy similar a la primera pero con 
     \includegraphics[width=9in, keepaspectratio, angle=90]{imagenes/objetivos-finalizacion-principal.png}
 \end{figure}
 
+\includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion1.png}
+
+\includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion2.png}
+
+\includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion3.png}
+
+\includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion4.png}
+
+\includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion5principal.png}
+
+\includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion51.png}
+
+\includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion52.png}
+
+\includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion53.png}
+
 \newpage
 
 \subsubsection{Observaciones}
