--- a/latex/presunciones.tex
+++ b/latex/presunciones.tex
@@ -69,3 +69,55 @@ El sistema que proponemos se caracteriza por simplificar las tareas dentro de la
         \item El contador se encarga de manejar todos los pagos cuando se termina el proyecto
     \end{enumerate}
 \end{enumerate}
+
+
+\subsection{Requerimientos}
+\begin{enumerate}
+
+%	\textbf{Creación de los proyectos}:
+	\item Proveer interfaz de mandar propuesta
+	\item Cliente manda propuesta mediante el Sistema $\rightarrow$ Notificar gerente
+	\item Proveer interfaz de creación de proyecto
+	\item Proveer interfaz gráfica de carga de datos de los PM
+	\item Crear ranking de PM
+	\item Evaluaciones cargadas en el sistema
+	\item Recalcular ranking de PMs usando las evaluaciones
+	\item Ordenar PMs por cantidad de proyectos actuales
+	\item Proveer interfaz gráfica selección de PM
+	\item Nuevo proyecto registrado en el sistema y PM asignado $\rightarrow$ Notificar gerente y PM
+	\item Sistema provee interfaz de cargar y mandar propuesta
+	\item Sistema provee interfaz de cargar y mandar respuesta
+	\item Proveer interfaz de carga de alcance, duración y condiciones
+	\item Notificar a los proveedores cuando su seguro este vencido
+	\item Proveer interfaz de carga de datos de proveedores
+	\item Crear ranking de proveedores
+	\item Evaluaciones actualizadas en el sistema
+	\item Recalcular ranking de proveedores usando las evaluaciones
+	\item Aplicar filtros para proveedores (rubro, ubicación geográfica)	
+	\item Proveer interfaz gráfica de consulta de disponibilidad
+	\item Consultar proveedores con seguro de caución vencido
+	\item Proveedores seleccionados $\rightarrow$ Sistema manda mail con formulario pidiendo presupuesto y disponibilidad para el proyecto actual
+	\item Proveedor llena el formulario $\rightarrow$ Notificar respuesta del proveedor al PM	
+	\item Proveer interfaz gráfica selección de proveedor
+	\item Proveedores asignados $\rightarrow$ Notificar a los proveedores elegidos y mandar mail de agradecimiento a los no elegidos
+	\item Proveedores asignados $\rightarrow$ pedir validación Gerente
+	\item Proveer interfaz de validar proveedores
+	\item Proveer interfaz de elegir precontrato
+	\item Notificar PM, Cliente y Proveedores que ya está todo el proyecto validado y hay que firmar los contratos
+	
+%	\textbf{Seguimiento de los proyectos}:
+	\item Proveedor nuevo y anterior iguales
+	\item Proveer interfaz para cargar actualizaciones de proyecto
+	\item Detectar si el PM no sube actualizaciones del proyecto
+	\item Cambios o Problemas en proyecto $\rightarrow$ Notificar al Gerente
+	\item Proveer interfaz para marcar como cancelado un proyecto
+	
+	
+%	\textbf{Finalización de los proyectos}:
+	\item Proveer interfaz para marcar como finalizado un proyecto
+	\item El proyecto se marca como finalizado $\rightarrow$ Notificar al Gerente
+	\item Enviar detalles y costos al Contador
+	\item Proveer interfaz para evaluar al PM
+	
+	
+\end{enumerate}
