--- a/latex/presunciones.tex
+++ b/latex/presunciones.tex
@@ -72,9 +72,13 @@ El sistema que proponemos se caracteriza por simplificar las tareas dentro de la
 
 
 \subsection{Requerimientos}
+
+Ahora, para lograr mejorar los procesos de la empresa, nuestro Sistema debe cumplir los siguientes requerimientos:
+
 \begin{enumerate}
 
-%	\textbf{Creación de los proyectos}:
+	\item[] \textbf{Creación de los proyectos}:
+    
 	\item Proveer interfaz de mandar propuesta
 	\item Cliente manda propuesta mediante el Sistema $\rightarrow$ Notificar gerente
 	\item Proveer interfaz de creación de proyecto
@@ -105,15 +109,16 @@ El sistema que proponemos se caracteriza por simplificar las tareas dentro de la
 	\item Proveer interfaz de elegir precontrato
 	\item Notificar PM, Cliente y Proveedores que ya está todo el proyecto validado y hay que firmar los contratos
 	
-%	\textbf{Seguimiento de los proyectos}:
+    \item[] \textbf{Seguimiento de los proyectos}:
+
 	\item Proveedor nuevo y anterior iguales
 	\item Proveer interfaz para cargar actualizaciones de proyecto
 	\item Detectar si el PM no sube actualizaciones del proyecto
 	\item Cambios o Problemas en proyecto $\rightarrow$ Notificar al Gerente
 	\item Proveer interfaz para marcar como cancelado un proyecto
 	
-	
-%	\textbf{Finalización de los proyectos}:
+    \item[] \textbf{Finalización de los proyectos}:
+
 	\item Proveer interfaz para marcar como finalizado un proyecto
 	\item El proyecto se marca como finalizado $\rightarrow$ Notificar al Gerente
 	\item Enviar detalles y costos al Contador
