--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -33,12 +33,16 @@ En este diagrama detallamos como la implementación del sistema propuesto colabo
     \includegraphics[width=\textwidth]{imagenes/objetivos-principales.png}
 \end{figure}
 
+En esta figura se ven los objetivos de mas alto nivel que luego detallamos en las siguientes subsecciones para cada uno de los subobjetivos que aparecen.
+
 \subsubsection{Creacion del proyecto}
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=18cm, keepaspectratio]{imagenes/objetivos-creacion-principal.png}
 \end{figure}
+
+Aca se pueden ver los objetivos primarios de Creacion de proyecto, el desgloce se muestra en los proximos graficos donde en cada figura podemos ver el detalle de cada subobjetivo con orden de aparicion de izquierda a derecha.
 
 \vspace{1em}
 
@@ -54,10 +58,14 @@ En este diagrama detallamos como la implementación del sistema propuesto colabo
     \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-2.png}
 \end{figure}
 
+\subsubsection{Seleccion mejor PM}
+
 \begin{figure}[H]
     \centering
-    \includegraphics[width=10in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-pm.png}
+    \includegraphics[width=9.5in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-pm.png}
 \end{figure}
+
+Podemos ver todos los objetivos que contribuyen a elegir el mejor PM para el proyecto dado.
 
 \subsubsection{Seleccion mejor proveedor}
 
@@ -66,25 +74,35 @@ En este diagrama detallamos como la implementación del sistema propuesto colabo
     \includegraphics[width=9in, keepaspectratio, angle=90]{imagenes/objetivos-seleccion-mejor-proveedor-principal.png}
 \end{figure}
 
+Estos son los subobjetivos principales para elegir los mejores proveedores para el proyecto. El desgloce de los 4 objetivos que quedan en las figuras siguientes.
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-1.png}
 \end{figure}
+
+Podemos ver el primer subobjetivo de 'Lograr conocer cuales son los mejores proveedores'.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-2.png}
 \end{figure}
 
+Segundo subobjetivo que contribuye a 'Lograr conocer cuales son los mejores proveedores'.
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-3.png}
 \end{figure}
 
+Primer subobjetivo que contribuye a 'Lograr conocer que proveedores estan disponibles y cual es su presupuesto'.
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=.5\textwidth]{imagenes/objetivos-seleccion-mejor-proveedor-4.png}
 \end{figure}
+
+Segundo subobjetivo que contribuye a 'Lograr conocer que proveedores estan disponibles y cual es su presupuesto'.
 
 \subsubsection{Seguimiento del proyecto}
 
