Explicaciones en Vistas

--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -1,7 +1,9 @@
 \subsection{Interacciones y alcance del sistema: Diagrama de Contexto}
-A continuación mostramos el Diagrama de Contexto de la empresa. En el mismo se detallan las interacciones entre los diversos agentes de la empresa y su interacción con el sistema propuesto:
+A continuación mostramos el Diagrama de Contexto de la empresa. En el mismo se detallan las interacciones entre los diversos agentes de la empresa y su interacción con el sistema propuesto.
 
-\subsubsection{Diagrama}
+Debido a la gran cantidad de interacciones entre los agentes decidimos, por una cuestión de comprensibilidad, separar el diagrama de contexto en dos partes complementarias. Por un lado se presentan las interacciones de todos los agentes con el Sistema a implementar. Por el otro, se muestran las acciones que suceden entre los demás agentes entre si. Estos diagramas no deben ser leídos por separado, sino que son dos partes del mismo, que representa el Diagrama de Contexto final entre todos los agentes.
+
+Además, para evitar confusiones y reducir el espacio, cada vez que se daba el caso de que había múltiples flechas de interacción entre dos agentes, la simplificamos en una sola donde listamos todas las formas en las que un agente actúa sobre el otro. Por eso, hay múltiples líneas de texto en cada flecha y estas deben ser leídas como una flecha en sí por cada línea de texto.
 
 \begin{figure}[H]
     \centering
@@ -15,16 +17,12 @@ A continuación mostramos el Diagrama de Contexto de la empresa. En el mismo se 
 
 \newpage
 
-\subsubsection{Observaciones}
-
-Debido a la gran cantidad de interacciones entre los agentes decidimos, por una cuestión de comprensibilidad, separar el diagrama de contexto en dos partes complementarias. Por un lado se presentan las interacciones de todos los agentes con el Sistema a implementar. Por el otro, se muestran las acciones que suceden entre los demás agentes entre si. Estos diagramas no deben ser leídos por separado, sino que son dos partes del mismo, que representa el Diagrama de Contexto final entre todos los agentes.
-
-Además, para evitar confusiones y reducir el espacio, cada vez que se daba el caso de que había múltiples flechas de interacción entre dos agentes, la simplificamos en una sola donde listamos todas las formas en las que un agente actúa sobre el otro. Por eso, hay múltiples líneas de texto en cada flecha y estas deben ser leídas como una flecha en sí por cada línea de texto.
-
-\newpage
-
 \subsection{Requerimientos del sistema: Diagrama de Objetivo}
 En este diagrama detallamos como la implementación del sistema propuesto colaborará con la mejora de los procesos de la empresa.
+
+El diagrama de objetivos se presenta con la idea de ser leído de izquierda a derecha. Frecuentemente, tratamos de colocar los objetivos que se suceden entre sí de esta forma para 'simular' los diferentes pasos que se suceden a través del tiempo.
+
+Separamos el diagrama en varias partes (como el Diagrama de Contexto) varias veces debido al tamaño del mismo. Estos gráficos se deben leer como las diferentes partes de un mismo diagrama. Asi, presentamos primero las ramas superiores que engloban los objetivos de más alto nivel y luego mostramos como se va completando cada rama con su diagrama correspondiente.
 
 \subsubsection{Objetivos principales}
 
@@ -131,26 +129,36 @@ Este es el detalle de la segunda alternativa, muy similar a la primera pero con 
     \includegraphics[width=9in, keepaspectratio, angle=90]{imagenes/objetivos-finalizacion-principal.png}
 \end{figure}
 
+Aca se pueden ver los objetivos de mas alto nivel para finalizar un proyecto. Podemos ver que hay un O-refinamiento donde se plantean dos alternativas: en una el proyecto se termina de forma 'normal' y en la otra, adicionalmente, se realizan encuestas para que el Cliente y el Gerente evaluen al PM y el PM evalue a los proveedores que participaron en el proyecto. El detalle de ellas aparece en los proximos graficos donde en cada figura podemos ver el detalle de cada subobjetivo con orden de aparicion de izquierda a derecha.
+
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion1.png}
+
+Primer subobjetivo que contribuye a la primera alternativa de 'Finalizar proyecto'.
 
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion2.png}
 
+Segundo subobjetivo que contribuye a la primera alternativa de 'Finalizar proyecto'.
+
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion3.png}
+
+Primer subobjetivo que contribuye a la segunda alternativa de 'Finalizar proyecto'.
 
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion4.png}
 
+Segundo subobjetivo que contribuye a la segunda alternativa de 'Finalizar proyecto'.
+
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion5principal.png}
+
+Podemos ver el tercer subobjetivo que contribuye a la segunda alternativa de 'Finalizar proyecto'. A su vez, este esta dividido en tres subobjetivos que se detallan en las siguientes figuras:
 
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion51.png}
 
+Primer subobjetivo que contribuye a 'El proyecto se marca como finalizado entonces se realizan las encuestas'.
+
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion52.png}
+
+Segundo subobjetivo que contribuye a 'El proyecto se marca como finalizado entonces se realizan las encuestas'.
 
 \includegraphics[width=\textwidth]{imagenes/objetivos-finalizacion53.png}
 
-\newpage
-
-\subsubsection{Observaciones}
-
-El diagrama de objetivos se presenta con la idea de ser leído de izquierda a derecha. Frecuentemente, tratamos de colocar los objetivos que se suceden entre sí de esta forma para 'simular' los diferentes pasos que se suceden a través del tiempo.
-
-Separamos el diagrama en varias partes (como el Diagrama de Contexto) varias veces debido al tamaño del mismo. Estos gráficos se deben leer como las diferentes partes de un mismo diagrama. Asi, presentamos primero las ramas superiores que engloban los objetivos de más alto nivel y luego mostramos como se va completando cada rama con su diagrama correspondiente.
+Tercer subobjetivo que contribuye a 'El proyecto se marca como finalizado entonces se realizan las encuestas'.
