--- a/latex/vistas.tex
+++ b/latex/vistas.tex
@@ -49,12 +49,54 @@ Aca se pueden ver los objetivos primarios de Creacion de proyecto, el desgloce s
     \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-1.png}
 \end{figure}
 
+Desgloce de 'Conocer propuestas del proyecto', primer subobjetivo de 'Mejorar crecion de proyecto'.
+
 \vspace{1em}
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-2.png}
 \end{figure}
+
+Desgloce de 'Registrar proyecto nuevo y asignar PM en el sistema', segundo subobjetivo de 'Mejorar crecion de proyecto'.
+
+\vspace{1em}
+
+\begin{figure}[H]
+	\hspace{-2cm}
+    \includegraphics[width=20cm]{imagenes/objetivos-creacion-3.png}
+\end{figure}
+
+Desgloce de 'Cargar alcance, duracion y condiciones del proyecto', tercer subobjetivo de 'Mejorar crecion de proyecto'.
+
+\vspace{1em}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-4.png}
+\end{figure}
+
+Desgloce de 'Asignar proveedores y pedir validadcion del Gerente', cuarto subobjetivo de 'Mejorar crecion de proyecto'.
+
+\vspace{1em}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-5.png}
+\end{figure}
+
+Desgloce de 'Validar proveedores y elegir precontrato', quinto subobjetivo de 'Mejorar crecion de proyecto'.
+
+\vspace{1em}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{imagenes/objetivos-creacion-6.png}
+\end{figure}
+
+Desgloce de 'Notificar PM, Gerente y proveedores y firmar contrato', sexto subobjetivo de 'Mejorar crecion de proyecto'.
+
+\newpage
 
 \subsubsection{Seleccion mejor PM}
 
